--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
 								<header class="major">
 
 									<h2>pride kazunga - my story</h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>This is where I will place a description for my featured work</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
